website navigation and the footer

--- a/index.html
+++ b/index.html
@@ -2,11 +2,110 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weekend Challenge</title>
+    <title>Mary Musa | Software Developer</title>
 </head>
+
 <body>
-    
-    
+
+<center>
+    <header>
+        <h1>Mary Abdulaziz Musa</h1><br>
+        <h3>Aspiring Software Engineer | Building Technology for Education & Impact</h3>
+        <hr width="80%">
+    </header>
+</center>
+
+<nav>
+    <center>
+        <table cellpadding="10">
+            <tr>
+                <td><a href="index.html">Home</a></td>
+                <td><a href="about.html">About</a></td>
+                <td><a href="projects.html">Projects</a></td>
+                <td><a href="blog.html">Blog</a></td>
+                <td><a href="contact.html">Contact</a></td>
+            </tr>
+        </table>
+        <hr width="80%">
+    </center>
+</nav>
+
+<main>
+
+<!-- Hero Section -->
+<center>
+    <section>
+        <table width="80%" cellpadding="20">
+            <tr>
+                <td width="50%">
+                    <h2>Welcome</h2>
+                    <p>
+                        I build purposeful software solutions focused on education,
+                        productivity, and intelligent systems.
+                    </p>
+                    <p>
+                        My mission is to empower learning in remote and underserved
+                        communities through technology.
+                    </p>
+                </td>
+
+                <td width="50%">
+                    <img src="assets/images/1.JPG" alt="Mary Musa" width="250">
+                </td>
+            </tr>
+        </table>
+        <hr width="80%">
+    </section>
+</center>
+
+<!-- Explore Section -->
+<center>
+<section>
+    <h2>Explore My Work</h2>
+
+    <table width="80%" cellpadding="15" border="1">
+        <tr>
+            <td>
+                <h3>About Me</h3>
+                <p>My journey from student to software engineer.</p>
+                <a href="about.html">Read More</a>
+            </td>
+
+            <td>
+                <h3>Projects</h3>
+                <p>A showcase of web applications that I worked on.</p>
+                <a href="projects.html">View Projects</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <h3>Developer Blog</h3>
+                <p>Insights, lessons, and reflections from my coding journey.</p>
+                <a href="blog.html">Read Blog</a>
+            </td>
+
+            <td>
+                <h3>Contact</h3>
+                <p>Let’s collaborate or connect professionally.</p>
+                <a href="contact.html">Get in Touch</a>
+            </td>
+        </tr>
+    </table>
+
+</section>
+</center>
+
+</main>
+
+<br><br><br><br>
+
+<footer>
+    <center>
+        <hr width="80%">
+        <p>© 2026 Mary Musa | Portfolio v2</p>
+    </center>
+</footer>
+
 </body>
 </html>
