--- a/projects.html
+++ b/projects.html
@@ -2,18 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Projects - Mary Musa Portfolio</title>
+    <title>Rural Education Hub - Project Deep Dive</title>
 </head>
-
 <body>
 
 <header>
-    <h1>My Projects</h1>
-
+    <h1>Rural Education Hub</h1>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="project-2.html">Rural Eduplatform</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -23,61 +20,32 @@
 </header>
 
 <main>
-
     <section>
-        <h2>Web Applications & Systems</h2>
-
-        <div>
-            <h3>Rural Education Hub</h3>
-            <p>
-                A multi-page educational website designed to showcase digital learning
-                solutions for underserved communities. Built using structured HTML5.
-            </p>
-        </div>
-
-        <div>
-            <h3>Student Developer Hub (Portfolio v2)</h3>
-            <p>
-                A professional multi-page portfolio website built to represent
-                my identity as a web developer. Includes deep-dive project pages
-                and a developer blog section.
-            </p>
-        </div>
-
-        <div>
-            <h3>Ngishana Naturals E-commerce Platform</h3>
-            <p>
-                A web-based e-commerce system designed to showcase and manage
-                beauty products, featuring structured navigation and system planning.
-            </p>
-        </div>
-
-        <div>
-            <h3>Bursary Management System (Web Proposal)</h3>
-            <p>
-                A structured web system concept designed to manage student bursary
-                applications, review processes, and reporting.
-            </p>
-        </div>
-
-        <div>
-            <h3>Personal Finance Tracker (Web Concept)</h3>
-            <p>
-                A web-based financial tracking system designed to help users
-                monitor income, expenses, and budgeting records.
-            </p>
-        </div>
-
-        <div>
-            <h3>Multi-Page Educational Website Project</h3>
-            <p>
-                A structured HTML5 website demonstrating semantic layout,
-                navigation linking, and organized content presentation.
-            </p>
-        </div>
-
+        <h2>Problem It Solves</h2>
+        <p>
+            Rural schools often lack access to digital learning tools. 
+            This website aims to bridge that gap by providing resources, 
+            guidance, and information for digital education initiatives.
+        </p>
     </section>
 
+    <section>
+        <h2>My Approach</h2>
+        <p>
+            I created a multi-page HTML5 site with structured navigation, 
+            clear content sections, and high-quality media to showcase 
+            initiatives like digital classrooms and teacher training.
+        </p>
+    </section>
+
+    <section>
+        <h2>The Hardest Thing I Learned</h2>
+        <p>
+            The biggest challenge was structuring a multi-page site so that 
+            navigation is intuitive and content is accessible to all users, 
+            including those with minimal technical background.
+        </p>
+    </section>
 </main>
 
 <footer>
